fix bootstrap modal-dialog z-index

--- a/panda-html/src/main/panda/css/panda.css
+++ b/panda-html/src/main/panda/css/panda.css
@@ -70,6 +70,11 @@
 	cursor: auto;
 }
 
+/** modal-dialog */
+.modal-dialog {
+	z-index: 1050;
+}
+
 /** navbar-nav */
 .navbar-nav > li > span {
 	padding-top: 10px;
