--- a/panda-html/src/main/panda/css/ui.bootstrap.css
+++ b/panda-html/src/main/panda/css/ui.bootstrap.css
@@ -9,6 +9,11 @@
 	cursor: auto;
 }
 
+/** modal-dialog */
+.modal-dialog {
+	z-index: 1050;
+}
+
 /** navbar-nav */
 .navbar-nav > li > span {
 	padding-top: 10px;
